// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toThrow asymmetric any-Class fail isNot false 1`] = `
expect(received).toThrow(expected)

Expected asymmetric matcher: Any<Err2>

Received name:    "Error"
Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrow asymmetric any-Class fail isNot true 1`] = `
expect(received).not.toThrow(expected)

Expected asymmetric matcher: not Any<Err>

Received name:    "Error"
Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrow asymmetric anything fail isNot false 1`] = `
expect(received).toThrow(expected)

Expected asymmetric matcher: Anything

Thrown value: null

`;

exports[`toThrow asymmetric anything fail isNot true 1`] = `
expect(received).not.toThrow(expected)

Expected asymmetric matcher: not Anything

Received name:    "Error"
Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrow asymmetric no-symbol fail isNot false 1`] = `
expect(received).toThrow(expected)

Expected asymmetric matcher: {"asymmetricMatch": [Function asymmetricMatch]}

Received name:    "Error"
Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrow asymmetric no-symbol fail isNot true 1`] = `
expect(received).not.toThrow(expected)

Expected asymmetric matcher: not {"asymmetricMatch": [Function asymmetricMatch]}

Received name:    "Error"
Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrow asymmetric objectContaining fail isNot false 1`] = `
expect(received).toThrow(expected)

Expected asymmetric matcher: ObjectContaining {"name": "NotError"}

Received name:    "Error"
Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrow asymmetric objectContaining fail isNot true 1`] = `
expect(received).not.toThrow(expected)

Expected asymmetric matcher: not ObjectContaining {"name": "Error"}

Received name:    "Error"
Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrow error class did not throw at all 1`] = `
expect(received).toThrow(expected)

Expected constructor: Err

Received function did not throw
`;

exports[`toThrow error class threw, but class did not match (error) 1`] = `
expect(received).toThrow(expected)

Expected constructor: Err2
Received constructor: Err

Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrow error class threw, but class did not match (non-error falsey) 1`] = `
expect(received).toThrow(expected)

Expected constructor: Err2

Received value: undefined

`;

exports[`toThrow error class threw, but class should not match (error subclass) 1`] = `
expect(received).not.toThrow(expected)

Expected constructor: not Err
Received constructor:     SubErr extends Err

Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrow error class threw, but class should not match (error subsubclass) 1`] = `
expect(received).not.toThrow(expected)

Expected constructor: not Err
Received constructor:     SubSubErr extends … extends Err

Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrow error class threw, but class should not match (error) 1`] = `
expect(received).not.toThrow(expected)

Expected constructor: not Err

Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrow error-message fail isNot false 1`] = `
expect(received).toThrow(expected)

Expected message: "apple"
Received message: "banana"

`;

exports[`toThrow error-message fail isNot true 1`] = `
expect(received).not.toThrow(expected)

Expected message: not "Invalid array length"

`;

exports[`toThrow error-message fail multiline diff highlight incorrect expected space 1`] = `
expect(received).toThrow(expected)

- Expected message  - 1
+ Received message  + 1

- There is no route defined for key Settings. 
+ There is no route defined for key Settings.
  Must be one of: 'Home'

`;

exports[`toThrow expected is undefined threw, but should not have (non-error falsey) 1`] = `
expect(received).not.toThrow()

Thrown value: null

`;

exports[`toThrow invalid actual 1`] = `
expect(received).toThrow()

Matcher error: received value must be a function

Received has type:  string
Received has value: "a string"
`;

exports[`toThrow invalid arguments 1`] = `
expect(received).not.toThrow(expected)

Matcher error: expected value must be a string or regular expression or class or error

Expected has type:  number
Expected has value: 111
`;

exports[`toThrow promise/async throws if Error-like object is returned did not throw at all 1`] = `
expect(received).rejects.toThrow()

Received function did not throw
`;

exports[`toThrow promise/async throws if Error-like object is returned threw, but class did not match 1`] = `
expect(received).rejects.toThrow(expected)

Expected constructor: Err2
Received constructor: Err

Received message: "async apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrow promise/async throws if Error-like object is returned threw, but should not have 1`] = `
expect(received).rejects.not.toThrow()

Error name:    "Error"
Error message: "async apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrow regexp did not throw at all 1`] = `
expect(received).toThrow(expected)

Expected pattern: /apple/

Received function did not throw
`;

exports[`toThrow regexp threw, but message did not match (error) 1`] = `
expect(received).toThrow(expected)

Expected pattern: /banana/
Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrow regexp threw, but message did not match (non-error falsey) 1`] = `
expect(received).toThrow(expected)

Expected pattern: /^[123456789]\\d*/
Received value:   0

`;

exports[`toThrow regexp threw, but message should not match (error) 1`] = `
expect(received).not.toThrow(expected)

Expected pattern: not / array /
Received message:     "Invalid array length"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrow regexp threw, but message should not match (non-error truthy) 1`] = `
expect(received).not.toThrow(expected)

Expected pattern: not /^[123456789]\\d*/
Received value:       404

`;

exports[`toThrow substring did not throw at all 1`] = `
expect(received).toThrow(expected)

Expected substring: "apple"

Received function did not throw
`;

exports[`toThrow substring threw, but message did not match (error) 1`] = `
expect(received).toThrow(expected)

Expected substring: "banana"
Received message:   "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrow substring threw, but message did not match (non-error falsey) 1`] = `
expect(received).toThrow(expected)

Expected substring: "Server Error"
Received value:     ""

`;

exports[`toThrow substring threw, but message should not match (error) 1`] = `
expect(received).not.toThrow(expected)

Expected substring: not "array"
Received message:       "Invalid array length"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrow substring threw, but message should not match (non-error truthy) 1`] = `
expect(received).not.toThrow(expected)

Expected substring: not "Server Error"
Received value:         "Internal Server Error"

`;

exports[`toThrowError asymmetric any-Class fail isNot false 1`] = `
expect(received).toThrowError(expected)

Expected asymmetric matcher: Any<Err2>

Received name:    "Error"
Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrowError asymmetric any-Class fail isNot true 1`] = `
expect(received).not.toThrowError(expected)

Expected asymmetric matcher: not Any<Err>

Received name:    "Error"
Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrowError asymmetric anything fail isNot false 1`] = `
expect(received).toThrowError(expected)

Expected asymmetric matcher: Anything

Thrown value: null

`;

exports[`toThrowError asymmetric anything fail isNot true 1`] = `
expect(received).not.toThrowError(expected)

Expected asymmetric matcher: not Anything

Received name:    "Error"
Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrowError asymmetric no-symbol fail isNot false 1`] = `
expect(received).toThrowError(expected)

Expected asymmetric matcher: {"asymmetricMatch": [Function asymmetricMatch]}

Received name:    "Error"
Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrowError asymmetric no-symbol fail isNot true 1`] = `
expect(received).not.toThrowError(expected)

Expected asymmetric matcher: not {"asymmetricMatch": [Function asymmetricMatch]}

Received name:    "Error"
Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrowError asymmetric objectContaining fail isNot false 1`] = `
expect(received).toThrowError(expected)

Expected asymmetric matcher: ObjectContaining {"name": "NotError"}

Received name:    "Error"
Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrowError asymmetric objectContaining fail isNot true 1`] = `
expect(received).not.toThrowError(expected)

Expected asymmetric matcher: not ObjectContaining {"name": "Error"}

Received name:    "Error"
Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrowError error class did not throw at all 1`] = `
expect(received).toThrowError(expected)

Expected constructor: Err

Received function did not throw
`;

exports[`toThrowError error class threw, but class did not match (error) 1`] = `
expect(received).toThrowError(expected)

Expected constructor: Err2
Received constructor: Err

Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrowError error class threw, but class did not match (non-error falsey) 1`] = `
expect(received).toThrowError(expected)

Expected constructor: Err2

Received value: undefined

`;

exports[`toThrowError error class threw, but class should not match (error subclass) 1`] = `
expect(received).not.toThrowError(expected)

Expected constructor: not Err
Received constructor:     SubErr extends Err

Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrowError error class threw, but class should not match (error subsubclass) 1`] = `
expect(received).not.toThrowError(expected)

Expected constructor: not Err
Received constructor:     SubSubErr extends … extends Err

Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrowError error class threw, but class should not match (error) 1`] = `
expect(received).not.toThrowError(expected)

Expected constructor: not Err

Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrowError error-message fail isNot false 1`] = `
expect(received).toThrowError(expected)

Expected message: "apple"
Received message: "banana"

`;

exports[`toThrowError error-message fail isNot true 1`] = `
expect(received).not.toThrowError(expected)

Expected message: not "Invalid array length"

`;

exports[`toThrowError error-message fail multiline diff highlight incorrect expected space 1`] = `
expect(received).toThrowError(expected)

- Expected message  - 1
+ Received message  + 1

- There is no route defined for key Settings. 
+ There is no route defined for key Settings.
  Must be one of: 'Home'

`;

exports[`toThrowError expected is undefined threw, but should not have (non-error falsey) 1`] = `
expect(received).not.toThrowError()

Thrown value: null

`;

exports[`toThrowError invalid actual 1`] = `
expect(received).toThrowError()

Matcher error: received value must be a function

Received has type:  string
Received has value: "a string"
`;

exports[`toThrowError invalid arguments 1`] = `
expect(received).not.toThrowError(expected)

Matcher error: expected value must be a string or regular expression or class or error

Expected has type:  number
Expected has value: 111
`;

exports[`toThrowError promise/async throws if Error-like object is returned did not throw at all 1`] = `
expect(received).rejects.toThrowError()

Received function did not throw
`;

exports[`toThrowError promise/async throws if Error-like object is returned threw, but class did not match 1`] = `
expect(received).rejects.toThrowError(expected)

Expected constructor: Err2
Received constructor: Err

Received message: "async apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrowError promise/async throws if Error-like object is returned threw, but should not have 1`] = `
expect(received).rejects.not.toThrowError()

Error name:    "Error"
Error message: "async apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrowError regexp did not throw at all 1`] = `
expect(received).toThrowError(expected)

Expected pattern: /apple/

Received function did not throw
`;

exports[`toThrowError regexp threw, but message did not match (error) 1`] = `
expect(received).toThrowError(expected)

Expected pattern: /banana/
Received message: "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrowError regexp threw, but message did not match (non-error falsey) 1`] = `
expect(received).toThrowError(expected)

Expected pattern: /^[123456789]\\d*/
Received value:   0

`;

exports[`toThrowError regexp threw, but message should not match (error) 1`] = `
expect(received).not.toThrowError(expected)

Expected pattern: not / array /
Received message:     "Invalid array length"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrowError regexp threw, but message should not match (non-error truthy) 1`] = `
expect(received).not.toThrowError(expected)

Expected pattern: not /^[123456789]\\d*/
Received value:       404

`;

exports[`toThrowError substring did not throw at all 1`] = `
expect(received).toThrowError(expected)

Expected substring: "apple"

Received function did not throw
`;

exports[`toThrowError substring threw, but message did not match (error) 1`] = `
expect(received).toThrowError(expected)

Expected substring: "banana"
Received message:   "apple"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrowError substring threw, but message did not match (non-error falsey) 1`] = `
expect(received).toThrowError(expected)

Expected substring: "Server Error"
Received value:     ""

`;

exports[`toThrowError substring threw, but message should not match (error) 1`] = `
expect(received).not.toThrowError(expected)

Expected substring: not "array"
Received message:       "Invalid array length"

  at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)
`;

exports[`toThrowError substring threw, but message should not match (non-error truthy) 1`] = `
expect(received).not.toThrowError(expected)

Expected substring: not "Server Error"
Received value:         "Internal Server Error"

`;
